frontend/css/_styles.scss
body {
    padding-bottom: $spacer * 40;
}

.page-header {
    margin-top: $spacer;
    margin-bottom: $spacer;
    border-bottom: $border-width solid $border-color;
    h1 {
        background-image:url('/img/drakkar-logo.png');
        background-repeat: no-repeat;
        background-position: right;
        background-size: contain;
    }
}

.row, .card, p, ul, table, fieldset {
    margin-top: $spacer;
    margin-bottom: $spacer;
    &:first-child {
        margin-top: 0;
    }
    &:last-child {
        margin-bottom: 0;
    }
}

.wrapper {
    &>.row, &>.card, &>p, &>ul, &>table, &>fieldset {
        margin-top: $spacer;
        margin-bottom: $spacer;
    }
}

.card {
    .card-header a {
        display: block;
        text-decoration: none;
    }
    .card-title strong {
        font-weight: 400;
    }
}

p {
    strong.kv.v {
        color: $danger;
    }
}

.alignment {
    rect {
        fill: $gray-400;
        &.h {
            fill: $primary;
        }
        &.v {
            fill: $danger;
        }
    }
}

